<resources>
    <string name="app_name">Module_2_Lesson_6_hw_2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_title">Patients list</string>
    <string name="name">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="age">Age:</string>
    <string name="sex">Sex:</string>
    <string name="medical_history">Medical history:</string>
</resources>